--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongoose": "^5.13.5",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "autoprefixer": "^10.3.1",
+    "eslint": "^7.32.0",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7"
   }
 }
