--- a/package.json
+++ b/package.json
@@ -6,12 +6,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.0",
     "mongoose": "^5.13.5",
     "next": "latest",
+    "next-auth": "^3.27.3",
+    "next-connect": "^0.10.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-validation": "^3.0.7",
+    "router": "^1.3.5",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/react": "^17.0.16",
     "autoprefixer": "^10.3.1",
     "eslint": "^7.32.0",
     "postcss": "^8.3.6",
