--- a/package.json
+++ b/package.json
@@ -12,25 +12,36 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "formik": "^2.2.9",
+    "formik-yup": "0.0.5",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.5",
     "next": "latest",
     "next-auth": "^3.27.3",
     "next-connect": "^0.10.2",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-validation": "^3.0.7",
     "router": "^1.3.5",
-    "validator": "^13.6.0"
+    "sweetalert": "^2.1.2",
+    "validator": "^13.6.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/react": "^17.0.16",
+    "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^10.3.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.32.0",
+    "jest-cli": "^27.0.6",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.7"
   }
