--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.0",
-    "mongoose": "^5.13.5",
+    "mongoose": "^5.13.7",
     "next": "latest",
     "next-auth": "^3.27.3",
     "next-connect": "^0.10.2",
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-validation": "^3.0.7",
     "router": "^1.3.5",
+    "save": "^2.4.0",
     "sweetalert": "^2.1.2",
     "validator": "^13.6.0",
     "yup": "^0.32.9"
