--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "devStart": "nodemon server.js"
+    
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -39,11 +41,31 @@
     "@types/react": "^17.0.16",
     "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^10.3.1",
+    "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.32.0",
     "jest-cli": "^27.0.6",
+    "nodemon": "^2.0.12",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.7"
-  }
+  },
+
+
+
+  
+  "name": "plantpocket",
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "version": "1.0.0",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/slyee96/psgplantpocketproject.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/slyee96/psgplantpocketproject/issues"
+  },
+  "homepage": "https://github.com/slyee96/psgplantpocketproject#readme"
 }
